--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,10 @@
 header {
     background-color: #2C3E50;
-    height: 100px;
+    height: 90px;
+}
+
+.test-wh {
+    border: 1px solid white;
+    width: 60px;
+    height: 30px;
 }
