--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,19 @@ header {
     width: 60px;
     height: 30px;
 }
+
+.test-bl {
+    border: 1px solid black;
+    width: 250px;
+    height: 250px;
+}
+
+.test-title {
+    border: 1px solid dodgerblue;
+    width: 250px;
+    height: 50px;
+}
+
+.bgc-green {
+    background-color: #1ABC9C;
+}
