--- a/css/style.css
+++ b/css/style.css
@@ -5,14 +5,14 @@ header {
 
 .test-wh {
     border: 1px solid white;
-    width: 60px;
+    width: 50px;
     height: 30px;
 }
 
 .test-bl {
     border: 1px solid black;
-    width: 250px;
-    height: 250px;
+    width: 200px;
+    height: 200px;
 }
 
 .test-title {
@@ -23,4 +23,10 @@ header {
 
 .bgc-green {
     background-color: #1ABC9C;
+}
+
+.test-portfolio {
+    border: 1px solid green;
+    width: 400px;
+    height: 300px;
 }
