--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ header {
 }
 
 .test-wh {
-    border: 1px solid white;
+    border: 2px solid orange;
     width: 50px;
     height: 30px;
 }
@@ -17,7 +17,7 @@ header {
 
 .test-title {
     border: 1px solid dodgerblue;
-    width: 250px;
+    width: 150px;
     height: 50px;
 }
 
@@ -27,6 +27,6 @@ header {
 
 .test-portfolio {
     border: 1px solid green;
-    width: 400px;
-    height: 300px;
+    width: 300px;
+    height: 250px;
 }
