--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
-.bgc-green {
+._bgc-green {
     background-color: #1ABC9C;
 }
 
-.bgc-grey {
+._bgc-grey {
     background-color: #2C3E50;
 }
 
-.bgc-darkgrey {
+._bgc-darkgrey {
     background-color: #3A546D;
 }
 
@@ -34,3 +34,18 @@
     width: 300px;
     height: 250px;
 }
+
+._w-line, ._b-line {
+    /* width: 70px; */
+    height: 3px;
+    border-radius: 2px;
+}
+
+._w-line {
+    background-color: white;
+}
+
+._b-line {
+    background-color: black;
+}
+
