--- a/css/style.css
+++ b/css/style.css
@@ -10,29 +10,8 @@
     background-color: #3A546D;
 }
 
-.test-wh {
-    border: 2px solid orange;
-    width: 50px;
-    height: 30px;
-}
-
-.test-bl {
-    border: 1px solid black;
-    width: 200px;
-    height: 200px;
-}
-
-.test-title {
-    border: 1px solid dodgerblue;
-    width: 150px;
-    height: 50px;
-}
-
-
-.test-portfolio {
-    border: 1px solid green;
-    width: 300px;
-    height: 250px;
+._btn-bg {
+    background-color: #1ABC9C;
 }
 
 ._w-line, ._b-line {
@@ -46,5 +25,9 @@
 
 ._b-line {
     background-color: black;
+}
+
+._no-border {
+    border: 0;
 }
 
