--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,11 @@
 }
 
 ._bgc-grey {
-    background-color: #2C3E50;
+    background-color: #3A546D;
 }
 
 ._bgc-darkgrey {
-    background-color: #3A546D;
+    background-color: #2C3E50;
 }
 
 ._btn-bg {
@@ -36,3 +36,14 @@
     height: 150px;
 }
 
+._invert {
+    filter: invert(1);
+}
+
+._square {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+}
